# platform.core.api.mediavision

./: AUTHORS  CMakeLists.txt  README  capi-media-vision.pc.in  media-vision-config-example.json  media-vision-config.json  project.config
doc/: mediavision_doc.h
include/: mv_barcode.h  mv_barcode_detect.h  mv_barcode_generate.h  mv_barcode_type.h  mv_common.h  mv_face.h  mv_face_type.h  mv_image.h  mv_image_type.h  mv_private.h  mv_surveillance.h  mv_surveillance_private.h
mv_barcode/: CMakeLists.txt
mv_barcode/barcode_detector/: CMakeLists.txt
mv_barcode/barcode_detector/include/: Barcode.h  BarcodeUtils.h  mv_barcode_detect_open.h
mv_barcode/barcode_detector/src/: Barcode.cpp  BarcodeUtils.cpp  mv_barcode_detect_open.cpp
mv_barcode/barcode_detector_lic/: CMakeLists.txt
mv_barcode/barcode_detector_lic/include/: mv_barcode_detect_lic.h
mv_barcode/barcode_detector_lic/src/: mv_barcode_detect_lic.c
mv_barcode/barcode_generator/: CMakeLists.txt
mv_barcode/barcode_generator/include/: BarcodeGenerator.h  BarcodeOptions.h  mv_barcode_generate_open.h
mv_barcode/barcode_generator/src/: BarcodeGenerator.cpp  mv_barcode_generate_open.cpp  mv_barcode_generate_open.cpp~
mv_barcode/barcode_generator_lic/: CMakeLists.txt
mv_barcode/barcode_generator_lic/include/: mv_barcode_generate_lic.h
mv_barcode/barcode_generator_lic/src/: mv_barcode_generate_lic.c
mv_common/: CMakeLists.txt
mv_common/include/: EngineConfig.h  MediaSource.h  mv_common_c.h
mv_common/src/: EngineConfig.cpp  MediaSource.cpp  mv_common_c.cpp
mv_face/: CMakeLists.txt
mv_face/face/: CMakeLists.txt
mv_face/face/include/: FaceDetector.h  FaceExpressionRecognizer.h  FaceEyeCondition.h  FaceRecognitionModel.h  FaceTrackingModel.h  FaceUtil.h  TrackerMedianFlow.h  mv_face_open.h
mv_face/face/src/: FaceDetector.cpp  FaceExpressionRecognizer.cpp  FaceEyeCondition.cpp  FaceRecognitionModel.cpp  FaceTrackingModel.cpp  FaceUtil.cpp  TrackerMedianFlow.cpp  mv_face_open.cpp
mv_face/face_lic/: CMakeLists.txt
mv_face/face_lic/include/: mv_face_lic.h
mv_face/face_lic/src/: mv_face_lic.c
mv_image/: CMakeLists.txt
mv_image/image/: CMakeLists.txt
mv_image/image/include/: ImageConfig.h  ImageContourStabilizator.h  ImageMathUtil.h  ImageObject.h  ImageRecognizer.h  ImageTracker.h  ImageTrackingModel.h  mv_image_open.h
mv_image/image/include/Features/: BasicExtractorFactory.h  FeatureExtractor.h  FeatureExtractorFactory.h  FeatureMatcher.h  FeaturePack.h  ORBExtractorFactory.h
mv_image/image/include/Recognition/: ImageObject.h  ImageRecognizer.h
mv_image/image/include/Tracking/: AsyncTracker.h  CascadeTracker.h  FeatureSubstitutionTracker.h  ImageContourStabilizator.h  ImageTrackingModel.h  MFTracker.h  ObjectTracker.h  RecognitionBasedTracker.h
mv_image/image/src/: ImageConfig.cpp  ImageContourStabilizator.cpp  ImageMathUtil.cpp  ImageObject.cpp  ImageRecognizer.cpp  ImageTracker.cpp  ImageTrackingModel.cpp  mv_image_open.cpp
mv_image/image/src/Features/: BasicExtractorFactory.cpp  FeatureExtractor.cpp  FeatureExtractorFactory.cpp  FeatureMatcher.cpp  FeaturePack.cpp  ORBExtractorFactory.cpp
mv_image/image/src/Recognition/: .ImageObject.cpp.swp  ImageObject.cpp  ImageRecognizer.cpp
mv_image/image/src/Tracking/: AsyncTracker.cpp  CascadeTracker.cpp  FeatureSubstitutionTracker.cpp  ImageContourStabilizator.cpp  ImageTrackingModel.cpp  MFTracker.cpp  ObjectTracker.cpp  RecognitionBasedTracker.cpp
mv_image/image_lic/: CMakeLists.txt
mv_image/image_lic/include/: mv_image_lic.h
mv_image/image_lic/src/: mv_image_lic.c
mv_surveillance/: CMakeLists.txt
mv_surveillance/surveillance/: CMakeLists.txt
mv_surveillance/surveillance/include/: EventDefs.h  EventManager.h  EventResult.h  EventTrigger.h  EventTriggerMovementDetection.h  EventTriggerPersonAppearance.h  EventTriggerPersonRecognition.h  HoGDetector.h  SurveillanceHelper.h  mv_absdiff.h  mv_apply_mask.h  mv_mask_buffer.h  mv_surveillance_open.h
mv_surveillance/surveillance/src/: EventManager.cpp  EventTrigger.cpp  EventTriggerMovementDetection.cpp  EventTriggerPersonAppearance.cpp  EventTriggerPersonRecognition.cpp  HoGDetector.cpp  SurveillanceHelper.cpp  mv_absdiff.c  mv_apply_mask.c  mv_mask_buffer.c  mv_surveillance_open.cpp
mv_surveillance/surveillance_lic/: CMakeLists.txt
mv_surveillance/surveillance_lic/include/: mv_surveillance_lic.h
mv_surveillance/surveillance_lic/src/: mv_surveillance_lic.c
packaging/: capi-media-vision.spec
src/: mv_barcode.c  mv_common.c  mv_face.c  mv_image.c  mv_private.c  mv_surveillance.c
test/: CMakeLists.txt
test/testsuites/: CMakeLists.txt
test/testsuites/barcode/: CMakeLists.txt  barcode_test_suite.c
test/testsuites/common/: CMakeLists.txt
test/testsuites/common/image_helper/: CMakeLists.txt
test/testsuites/common/image_helper/include/: ImageHelper.h  image_helper.h
test/testsuites/common/image_helper/src/: ImageHelper.cpp  image_helper.cpp
test/testsuites/common/testsuite_common/: CMakeLists.txt  mv_testsuite_common.c  mv_testsuite_common.h
test/testsuites/common/video_helper/: CMakeLists.txt  mv_log_cfg.h  mv_video_helper.c  mv_video_helper.h
test/testsuites/face/: CMakeLists.txt  face_test_suite.c
test/testsuites/image/: CMakeLists.txt  image_test_suite.c
test/testsuites/surveillance/: CMakeLists.txt  surveillance_test_suite.c
